--- a/index.html
+++ b/index.html
@@ -3,75 +3,81 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard Compacto</title>
+<title>Dashboard Horizontal</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-  :root{
-    --card-bg:#fff;
-    --muted:#6b7280;
-    --shadow:0 6px 20px rgba(0,0,0,0.08);
-    --red:#FF4136;
-    --orange:#FFA500;
-    --green:#16a34a;
-    font-family: 'Inter', sans-serif;
-  }
+:root{
+  --card-bg:#fff;
+  --muted:#6b7280;
+  --shadow:0 6px 20px rgba(15,23,42,0.08);
+  --red:#FF4136;
+  --orange:#FFA500;
+  --green:#16a34a;
+  font-family:'Inter',sans-serif;
+}
+body{
+  margin:0;
+  background:#f3f4f6;
+  display:flex;
+  justify-content:center;
+  height:100vh;
+}
+.wrap{
+  width:700px;
+  max-width:95%;
+  display:flex;
+  flex-direction:column;
+  gap:16px;
+  height:100%;
+  overflow-y:auto;
+  padding:16px 0;
+}
 
-  body{
-    margin:20px;
-    background:#f3f4f6;
-    display:flex;
-    justify-content:center;
-    font-size:14px;
-    color:#0f172a;
-  }
+/* Funil topo */
+#cardFunil{
+  background:var(--card-bg);
+  border-radius:10px;
+  padding:12px;
+  box-shadow:var(--shadow);
+}
+.title{ font-weight:700; font-size:16px; margin-bottom:8px; }
+.funil { display:flex; flex-direction:column; gap:6px; }
+.step{ display:flex; flex-direction:column; gap:2px; }
+.step-head{ display:flex; justify-content:space-between; font-size:12px; color:var(--muted); }
+.bar-wrap{ height:10px; background:#eef2f7; border-radius:999px; overflow:hidden; }
+.bar{ height:100%; border-radius:999px; transition:width 600ms ease; }
+.bar.impr { background: linear-gradient(90deg,#93c5fd,#2563eb); }
+.bar.click { background: linear-gradient(90deg,#fcd34d,#f59e0b); }
+.bar.lead { background: linear-gradient(90deg,#86efac,#16a34a); }
+.bar.cart { background: linear-gradient(90deg,#fbcfe8,#ec4899); }
+.bar.checkout { background: linear-gradient(90deg,#c7d2fe,#7c3aed); }
+.bar.buy { background: linear-gradient(90deg,#ff9a9e,#ff6a88); }
+.loss{ color:#ef4444; font-size:11px; }
 
-  .wrap{
-    display:flex;
-    flex-direction:column;
-    gap:16px;
-    width:360px;
-    max-width:95%;
-  }
+/* Área gráfico + cards lado a lado */
+.graph-area{
+  display:flex;
+  gap:16px;
+  align-items:flex-start;
+}
 
-  .card{
-    background:var(--card-bg);
-    border-radius:12px;
-    padding:12px;
-    box-shadow:var(--shadow);
-  }
+/* Gráfico */
+.chart-card { display:flex; flex-direction:column; align-items:center; gap:8px; background:var(--card-bg); border-radius:10px; padding:12px; box-shadow:var(--shadow); width:290px; }
+.chart-title{ font-weight:700; font-size:14px; }
+.chart-wrap{ width:220px; height:220px; position:relative; }
+.center-total{ position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); text-align:center; pointer-events:none; }
+.center-total .label{ color:var(--muted); font-size:12px; }
+.center-total .num{ font-weight:700; font-size:16px; margin-top:2px; }
+.legend-row{ display:flex; gap:12px; margin-top:6px; }
+.legend-item{ display:flex; gap:6px; align-items:center; font-size:12px; color:var(--muted); }
+.legend-swatch{ width:12px; height:12px; border-radius:3px; }
 
-  .title{ font-weight:700; font-size:16px; margin-bottom:8px; }
+/* Cards Lucro/ROI/CPA vertical */
+.perf{ display:flex; flex-direction:column; gap:8px; }
+.box{ background:#fbfdff; padding:8px; border-radius:8px; border:1px solid #eef2f7; text-align:center; font-size:11px; width:120px; }
+.box .v{ font-weight:700; font-size:14px; }
+.box .t{ color:var(--muted); font-size:11px; }
 
-  /* Funil compacto */
-  .funil { display:flex; flex-direction:column; gap:6px; }
-  .step{ display:flex; flex-direction:column; gap:2px; }
-  .step-head{ display:flex; justify-content:space-between; font-size:12px; color:var(--muted); }
-  .bar-wrap{ height:8px; background:#eef2f7; border-radius:999px; overflow:hidden; }
-  .bar{ height:100%; border-radius:999px; transition:width 600ms ease; }
-  .bar.impr { background: linear-gradient(90deg,#93c5fd,#2563eb); }
-  .bar.click { background: linear-gradient(90deg,#fcd34d,#f59e0b); }
-  .bar.lead { background: linear-gradient(90deg,#86efac,#16a34a); }
-  .bar.cart { background: linear-gradient(90deg,#fbcfe8,#ec4899); }
-  .bar.checkout { background: linear-gradient(90deg,#c7d2fe,#7c3aed); }
-  .bar.buy { background: linear-gradient(90deg,#ff9a9e,#ff6a88); }
-  .loss{ color:#ef4444; font-size:12px; }
-
-  /* Gráfico */
-  .chart-card { display:flex; flex-direction:column; align-items:center; gap:8px; }
-  .chart-title{ font-weight:700; font-size:15px; }
-  .chart-wrap{ width:240px; height:240px; position:relative; }
-  .center-total{ position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); text-align:center; pointer-events:none; }
-  .center-total .label{ color:var(--muted); font-size:12px; }
-  .center-total .num{ font-weight:700; font-size:18px; margin-top:2px; }
-  .legend-row{ display:flex; gap:12px; margin-top:6px; }
-  .legend-item{ display:flex; gap:6px; align-items:center; font-size:12px; color:var(--muted); }
-  .legend-swatch{ width:10px; height:10px; border-radius:2px; }
-
-  /* Cards Lucro/ROI/CPA */
-  .perf{ display:flex; gap:8px; margin-top:8px; justify-content:center; }
-  .box{ flex:1; background:#fbfdff; padding:6px; border-radius:8px; border:1px solid #eef2f7; text-align:center; font-size:12px; }
-  .box .v{ font-weight:700; font-size:14px; }
-  .box .t{ color:var(--muted); font-size:11px; }
 </style>
 </head>
 <body>
@@ -79,28 +85,32 @@
 <div class="wrap">
 
   <!-- Funil -->
-  <div class="card" id="cardFunil">
+  <div id="cardFunil">
     <div class="title">Funil de Conversão</div>
     <div class="funil" id="funilConversion"></div>
   </div>
 
-  <!-- Gráfico + Cards -->
-  <div class="card chart-card" id="cardGraficoVendas">
-    <div class="chart-title">Gráfico de Vendas</div>
-    <div class="chart-wrap">
-      <canvas id="doughnutChartVendas" width="240" height="240"></canvas>
-      <div class="center-total" id="centerTotalVendas">
-        <div class="label">TOTAL</div>
-        <div class="num" id="centerValueVendas">0 MT</div>
-        <div style="font-size:11px;color:var(--muted);margin-top:4px;" id="centerSubVendas">M-Pesa + E-Mola</div>
+  <!-- Área gráfico + cards lado a lado -->
+  <div class="graph-area">
+
+    <!-- Gráfico -->
+    <div class="chart-card">
+      <div class="chart-title">Gráfico de Vendas</div>
+      <div class="chart-wrap">
+        <canvas id="doughnutChartVendas" width="220" height="220"></canvas>
+        <div class="center-total" id="centerTotalVendas">
+          <div class="label">TOTAL</div>
+          <div class="num" id="centerValueVendas">0 MT</div>
+          <div style="font-size:12px;color:var(--muted);margin-top:4px;" id="centerSubVendas">M-Pesa + E-Mola</div>
+        </div>
+      </div>
+      <div class="legend-row">
+        <div class="legend-item"><div class="legend-swatch" style="background:#FF4136"></div>M-Pesa</div>
+        <div class="legend-item"><div class="legend-swatch" style="background:#FFA500"></div>E-Mola</div>
       </div>
     </div>
 
-    <div class="legend-row">
-      <div class="legend-item"><div class="legend-swatch" style="background:#FF4136"></div>M-Pesa</div>
-      <div class="legend-item"><div class="legend-swatch" style="background:#FFA500"></div>E-Mola</div>
-    </div>
-
+    <!-- Cards Lucro/ROI/CPA vertical -->
     <div class="perf">
       <div class="box">
         <div class="v" id="profitBoxVendas">0 MT</div>
@@ -112,17 +122,17 @@
       </div>
       <div class="box">
         <div class="v" id="cpaBoxVendas">0 MT</div>
-        <div class="t">Custo por Venda</div>
+        <div class="t">Custo/Venda</div>
       </div>
     </div>
-  </div>
 
+  </div>
 </div>
 
 <script>
 const fmt = n => new Intl.NumberFormat('pt-MZ').format(Math.round(n));
 
-// Funil
+// Funil de exemplo
 const stepsData = [
   { id:'imprF', name:'Impressões', value:35000 },
   { id:'clickF', name:'Cliques', value:2120 },
@@ -149,7 +159,7 @@ stepsData.forEach((s,i)=>{
   funil.appendChild(el);
 });
 
-// Gráfico
+// Gráfico de Vendas
 const mpesa = 4000;
 const emola = 2400;
 const total = mpesa + emola;
@@ -166,7 +176,7 @@ new Chart(ctx, {
     }]
   },
   options:{
-    cutout:'60%',
+    cutout:'62%',
     plugins:{ legend:{ display:false } }
   }
 });
@@ -181,6 +191,7 @@ const cpa = purchases? (invested/purchases) : 0;
 document.getElementById('profitBoxVendas').textContent = fmt(profit)+' MT';
 document.getElementById('roiBoxVendas').textContent = roi+'%';
 document.getElementById('cpaBoxVendas').textContent = fmt(cpa)+' MT';
+
 </script>
 </body>
 </html>
